v1.0.0/modules/schema/pages/class/ApparentPower.adoc
= `ApparentPower`
:toclevels: 4


+++Product of the RMS value of the voltage and the RMS value of the current.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:ApparentPower`


| CIM standard (perspective)
| IEC61970 (Grid)

|===

== Slots

[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| `value`
| 0..1
| https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:ApparentPower.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:ApparentPower.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:ApparentPower.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////